After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746457 - oggdemux: don't abuse GST_ERROR()
oggdemux: don't abuse GST_ERROR()
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-19 13:33 UTC by Guillaume Desmottes
Modified: 2015-04-01 15:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
oggdemux: don't use GST_ERROR() for debug messages (1.10 KB, patch)
2015-03-19 13:35 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2015-03-19 13:33:55 UTC
Those shouldn't be ERROR and spam gst-validate logs:

0:00:07.250586358 15328 0x7fb9680e0de0 ERROR               oggdemux gstoggdemux.c:4817:gst_ogg_demux_loop_push: Pushing event seek event: 0x7fb954002e60, time 99:99:99.999999999, seq-num 1565, GstEventSeek, rate=(double)16, format=(GstFormat)GST_FORMAT_BYTES, flags=(GstSeekFlags)GST_SEEK_FLAG_FLUSH+GST_SEEK_FLAG_ACCURATE, cur-type=(GstSeekType)GST_SEEK_TYPE_SET, cur=(gint64)0, stop-type=(GstSeekType)GST_SEEK_TYPE_NONE, stop=(gint64)-1;
0:00:07.250996995 15328 0x7fb9680e0de0 ERROR               oggdemux gstoggdemux.c:4827:gst_ogg_demux_loop_push: Pushed event ok
Comment 1 Guillaume Desmottes 2015-03-19 13:35:18 UTC
Created attachment 299822 [details] [review]
oggdemux: don't use GST_ERROR() for debug messages

Fix
Comment 2 Vincent Penquerc'h 2015-04-01 15:09:01 UTC
Oops, forgot these when cleaning up my debugging :)
I pushed your patch after adding the sinkpad (ie, s/GST_DEBUG/GST_DEBUG_OBJECT).

commit 452d7b04e3eefb760bf87e9be6a0cd6c7d40869d
Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Date:   Thu Mar 19 14:34:07 2015 +0100

    oggdemux: don't use GST_ERROR() for debug messages
    
    Fix https://bugzilla.gnome.org/show_bug.cgi?id=746457